extension removed & captcha added

--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
           <ul class="navbar-list">
 
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="index" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
               <div class="dropdown">
-                <a href="about.html" class="nav-link" class="dropdown-toggle">About</a>
+                <a href="about" class="nav-link" class="dropdown-toggle">About</a>
                 <div class="dropdown-content">
-                  <a href="about.html">About Us</a>
-                  <a href="team.html">Our Team</a>
-                  <a href="carrer.html">Careers</a>
-                  <a href="contact.html">Contact Us</a>
+                  <a href="about">About Us</a>
+                  <a href="team">Our Team</a>
+                  <a href="carrer">Careers</a>
+                  <a href="contact">Contact Us</a>
                 </div>
               </div>
             </li>
@@ -117,32 +117,32 @@
               <div class="dropdown">
                 <a href="#about" class="nav-link" class="dropdown-toggle">Our Services</a>
                 <div class="dropdown-content">
-                  <a href="seo.html">Search Engine Optimization (SEO)</a>
-                  <a href="smo.html">Social Media Marketing (SMM)</a>
-                  <a href="web.html">Web Development & Design</a>
-                  <a href="graphics.html">Graphics Design</a>
-                  <a href="paidadd.html">Paid Advertising All platforms</a>
-                  <a href="promotion.html">Promotional Video Marketing</a>
-                  <a href="localization.html">Translation & Localization Service</a>
+                  <a href="seo">Search Engine Optimization (SEO)</a>
+                  <a href="smo">Social Media Marketing (SMM)</a>
+                  <a href="web">Web Development & Design</a>
+                  <a href="graphics">Graphics Design</a>
+                  <a href="paidadd">Paid Advertising All platforms</a>
+                  <a href="promotion">Promotional Video Marketing</a>
+                  <a href="localization">Translation & Localization Service</a>
                   <!-- <a href="expert.html">Service Provider</a> -->
                 </div>
               </div>
             </li>
 
             <li class="nav-item">
-              <a href="portfolio.html" class="nav-link">Portfolio</a>
+              <a href="portfolio" class="nav-link">Portfolio</a>
             </li>
 
             <li class="nav-item">
-              <a href="blog.html" class="nav-link">Blog</a>
+              <a href="blog" class="nav-link">Blog</a>
             </li>
 
             <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
+              <a href="contact" class="nav-link">Contact</a>
             </li>
 
             <li class="nav-item">
-              <a href="package.html" class="nav-link">Package</a>
+              <a href="package" class="nav-link">Package</a>
             </li>
 
           </ul>
@@ -180,7 +180,7 @@
             </p>
 
 
-            <a href="service.html">
+            <a href="service">
               <button class="btn btn-primary">Get started</button>
             </a>
           </div>
@@ -229,7 +229,7 @@
                     platforms like Facebook and Instagram, boosting brand awareness, traffic, and sales
                   </p>
 
-                  <a href="smo.html" class="btn btn-primary">Explore</a>
+                  <a href="smo" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -248,7 +248,7 @@
                     conversions.
                   </p>
 
-                  <a href="paidadd.html" class="btn btn-primary">Explore</a>
+                  <a href="paidadd" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -266,7 +266,7 @@
                     that engage and convert.
                   </p>
 
-                  <a href="web.html" class="btn btn-primary">Explore</a>
+                  <a href="web" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -284,7 +284,7 @@
                     number of organic leads at a cost that is just absolutely unbeatable.
                   </p>
 
-                  <a href="seo.html" class="btn btn-primary">Explore</a>
+                  <a href="seo" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -303,7 +303,7 @@
                     impactful visual storytelling.
                   </p>
 
-                  <a href="promotion.html" class="btn btn-primary">Explore</a>
+                  <a href="promotion" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -322,7 +322,7 @@
                     target audience.
                   </p>
 
-                  <a href="graphics.html" class="btn btn-primary">Explore</a>
+                  <a href="graphics" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -331,7 +331,7 @@
 
           </div>
           <div class="explore-more-container">
-            <a href="service.html" class="btn btn-primary">Explore More</a>
+            <a href="service" class="btn btn-primary">Explore More</a>
           </div>
 
         </div>
