--- a/service.html
+++ b/service.html
@@ -57,7 +57,7 @@
 
     <div class="container">
 
-      <a href="index.html" class="logo">
+      <a href="index" class="logo">
         <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
@@ -72,51 +72,51 @@
           <ul class="navbar-list">
 
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="index" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
               <div class="dropdown">
-                <a href="about.html" class="nav-link" class="dropdown-toggle">About</a>
+                <a href="about" class="nav-link" class="dropdown-toggle">About</a>
                 <div class="dropdown-content">
-                  <a href="about.html">About Us</a>
-                  <a href="team.html">Our Team</a>
-                  <a href="carrer.html">Careers</a>
-                  <a href="contact.html">Contact Us</a>
+                  <a href="about">About Us</a>
+                  <a href="team">Our Team</a>
+                  <a href="carrer">Careers</a>
+                  <a href="contact">Contact Us</a>
                 </div>
               </div>
             </li>
 
             <li class="nav-item">
               <div class="dropdown">
-                <a href="#about" class="nav-link" class="dropdown-toggle">Our Services</a>
+                <a href="service" class="nav-link" class="dropdown-toggle">Our Services</a>
                 <div class="dropdown-content">
-                  <a href="seo.html">Search Engine Optimization (SEO)</a>
-                  <a href="smo.html">Social Media Marketing (SMM)</a>
-                  <a href="web.html">Web Development & Design</a>
-                  <a href="graphics.html">Graphics Design</a>
-                  <a href="paidadd.html">Paid Advertising All platforms</a>
-                  <a href="promotion.html">Promotional Video Marketing</a>
-                  <a href="localization.html">Translation & Localization Service</a>
+                  <a href="seo">Search Engine Optimization (SEO)</a>
+                  <a href="smo">Social Media Marketing (SMM)</a>
+                  <a href="web">Web Development & Design</a>
+                  <a href="graphics">Graphics Design</a>
+                  <a href="paidadd">Paid Advertising All platforms</a>
+                  <a href="promotion">Promotional Video Marketing</a>
+                  <a href="localization">Translation & Localization Service</a>
                   <!-- <a href="expert.html">Service Provider</a> -->
                 </div>
               </div>
             </li>
 
             <li class="nav-item">
-              <a href="portfolio.html" class="nav-link">Portfolio</a>
+              <a href="portfolio" class="nav-link">Portfolio</a>
             </li>
 
             <li class="nav-item">
-              <a href="blog.html" class="nav-link">Blog</a>
+              <a href="blog" class="nav-link">Blog</a>
             </li>
 
             <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
+              <a href="contact" class="nav-link">Contact</a>
             </li>
 
             <li class="nav-item">
-              <a href="package.html" class="nav-link">Package</a>
+              <a href="package" class="nav-link">Package</a>
             </li>
 
           </ul>
@@ -151,49 +151,49 @@
           <h3>Search Engine Optimization</h3>
           <p>Spend more time on what matters most. Let our executive virtual assistants manage your emails, calendars,
             and other routine tasks.</p>
-          <a href="seo.html" class="btn btn-primary">Explore More</a>
+          <a href="seo" class="btn btn-primary">Explore More</a>
 
         </div>
         <div class="role-card">
           <img src="./assets/img/design.jpg" alt="smo">
           <h3>Social Media Optimization</h3>
           <p>Get your print or digital projects ready for publishing with our graphic designers.</p>
-          <a href="smo.html" class="btn btn-primary">Explore More</a>
+          <a href="smo" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/smo1.jpg" alt="website development">
           <h3>Website Design &Development</h3>
           <p>From generating sales opportunities to contacting prospects, our virtual assistants help you build a
             stronger pipeline.</p>
-          <a href="web.html" class="btn btn-primary">Explore More</a>
+          <a href="web" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/programming.jpg" alt="graphics">
           <h3>Graphics Design</h3>
           <p>Leverage our multilingual customer support specialists to resolve your customer issues efficiently across
             all channels.</p>
-          <a href="graphics.html" class="btn btn-primary">Explore More</a>
+          <a href="graphics" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/android.jpg" alt="Promotion Video Marketing">
           <h3>Promotion Video Marketing</h3>
           <p>Be it social media design, copywriting, or website management, our virtual assistants streamline all your
             online marketing needs.</p>
-          <a href="promotion.html" class="btn btn-primary">Explore More</a>
+          <a href="promotion" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/hr.jpg" alt="paid Advartising All Platform<">
           <h3>Paid Advartising All Platform</h3>
           <p>No bookkeeping task is off-limits for us. We help create financial reports, process invoices, monitor cash
             flows, and more.</p>
-          <a href="paidadd.html" class="btn btn-primary">Explore More</a>
+          <a href="paidadd" class="btn btn-primary">Explore More</a>
         </div>
         <div class="role-card">
           <img src="./assets/img/hr.jpg" alt="Translation & Localization Serice">
           <h3>Translation & Localization Service</h3>
           <p>No bookkeeping task is off-limits for us. We help create financial reports, process invoices, monitor cash
             flows, and more.</p>
-          <a href="localization.html" class="btn btn-primary">Explore More</a>
+          <a href="localization" class="btn btn-primary">Explore More</a>
         </div>
       </div>
     </div>
