--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="dropdown">
                 <a href="#about" class="nav-link" class="dropdown-toggle">Our Services</a>
                 <div class="dropdown-content">
-                  <a href="seo">Search Engine Optimization (SEO)</a>
+                  <a href="seo.html">Search Engine Optimization (SEO)</a>
                   <a href="smo">Social Media Marketing (SMM)</a>
                   <a href="web">Web Development & Design</a>
                   <a href="graphics">Graphics Design</a>
