--- a/footer.html
+++ b/footer.html
@@ -52,31 +52,31 @@
             </li>
 
             <li>
-              <a href="index" class="footer-link">Home</a>
+              <a href="index.html" class="footer-link">Home</a>
             </li>
 
             <li>
-              <a href="service" class="footer-link">Services</a>
+              <a href="service.html" class="footer-link">Services</a>
             </li>
 
             <li>
-              <a href="carrer" class="footer-link">Careers</a>
+              <a href="carrer.html" class="footer-link">Careers</a>
             </li>
 
             <li>
-              <a href="blog" class="footer-link">Blog</a>
+              <a href="blog.html" class="footer-link">Blog</a>
             </li>
 
             <li>
-              <a href="team" class="footer-link">Our Team</a>
+              <a href="team.html" class="footer-link">Our Team</a>
             </li>
 
             <li>
-              <a href="contact" class="footer-link">Contact Us</a>
+              <a href="contact.html" class="footer-link">Contact Us</a>
             </li>
 
             <li>
-              <a href="about" class="footer-link">About Us</a>
+              <a href="about.html" class="footer-link">About Us</a>
             </li>
 
 
