--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 
     <div class="container">
 
-      <a href="index" class="logo">
+      <a href="index.html" class="logo">
         <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
@@ -73,7 +73,7 @@
           <ul class="navbar-list">
 
             <li class="nav-item">
-              <a href="index" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
