--- a/seo.html
+++ b/seo.html
@@ -88,7 +88,7 @@
           <ul class="navbar-list">
 
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="home.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
