--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
 
 
 
-  <div class="boxes row-1">
+ <!--  <div class="boxes row-1">
     <button class="box">Improve my essay writing</button>
     <button class="box">Tell me a fun fact about the Roman Empire</button>
     <button class="box">Write a text inviting neighbors to a barbecue</button>
@@ -829,7 +829,7 @@
     <button class="box">Quiz me on world capitals</button>
     <button class="box">Design a programming game</button>
     <button class="box">Make up a story about Sharky</button>
-  </div>
+  </div> -->
 
   <!-- newsletter -->
 
