--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
 
     <div class="container">
 
-      <a href="index" class="logo">
+      <a href="index.html" class="logo">
         <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
@@ -74,51 +74,51 @@
           <ul class="navbar-list">
 
             <li class="nav-item">
-              <a href="index" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
               <div class="dropdown">
-                <a href="about" class="nav-link" class="dropdown-toggle">About</a>
+                <a href="about.html" class="nav-link" class="dropdown-toggle">About</a>
                 <div class="dropdown-content">
-                  <a href="about">About Us</a>
-                  <a href="team">Our Team</a>
-                  <a href="carrer">Careers</a>
-                  <a href="contact">Contact Us</a>
+                  <a href="about.html">About Us</a>
+                  <a href="team.html">Our Team</a>
+                  <a href="carrer.html">Careers</a>
+                  <a href="contact.html">Contact Us</a>
                 </div>
               </div>
             </li>
 
             <li class="nav-item">
               <div class="dropdown">
-                <a href="about" class="nav-link" class="dropdown-toggle">Our Services</a>
+                <a href="about.html" class="nav-link" class="dropdown-toggle">Our Services</a>
                 <div class="dropdown-content">
-                  <a href="seo">Search Engine Optimization (SEO)</a>
-                  <a href="smo">Social Media Marketing (SMM)</a>
-                  <a href="web">Web Development & Design</a>
-                  <a href="graphics">Graphics Design</a>
-                  <a href="paidadd">Paid Advertising All platforms</a>
-                  <a href="promotion">Promotional Video Marketing</a>
-                  <a href="localization">Translation & Localization Service</a>
+                  <a href="seo.html">Search Engine Optimization (SEO)</a>
+                  <a href="smo.html">Social Media Marketing (SMM)</a>
+                  <a href="web.html">Web Development & Design</a>
+                  <a href="graphics.html">Graphics Design</a>
+                  <a href="paidadd.html">Paid Advertising All platforms</a>
+                  <a href="promotion.html">Promotional Video Marketing</a>
+                  <a href="localization.html">Translation & Localization Service</a>
                   <!-- <a href="expert.html">Service Provider</a> -->
                 </div>
               </div>
             </li>
 
             <li class="nav-item">
-              <a href="portfolio" class="nav-link">Portfolio</a>
+              <a href="portfolio.html" class="nav-link">Portfolio</a>
             </li>
 
             <li class="nav-item">
-              <a href="blog" class="nav-link">Blog</a>
+              <a href="blog.html" class="nav-link">Blog</a>
             </li>
 
             <li class="nav-item">
-              <a href="contact" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
 
             <li class="nav-item">
-              <a href="package" class="nav-link">Package</a>
+              <a href="package.html" class="nav-link">Package</a>
             </li>
 
           </ul>
