--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     platforms like Facebook and Instagram, boosting brand awareness, traffic, and sales
                   </p>
 
-                  <a href="smo" class="btn btn-primary">Explore</a>
+                  <a href="smo.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -248,7 +248,7 @@
                     conversions.
                   </p>
 
-                  <a href="paidadd" class="btn btn-primary">Explore</a>
+                  <a href="paidadd.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -266,7 +266,7 @@
                     that engage and convert.
                   </p>
 
-                  <a href="web" class="btn btn-primary">Explore</a>
+                  <a href="web.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -284,7 +284,7 @@
                     number of organic leads at a cost that is just absolutely unbeatable.
                   </p>
 
-                  <a href="seo" class="btn btn-primary">Explore</a>
+                  <a href="seo.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -303,7 +303,7 @@
                     impactful visual storytelling.
                   </p>
 
-                  <a href="promotion" class="btn btn-primary">Explore</a>
+                  <a href="promotion.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -322,7 +322,7 @@
                     target audience.
                   </p>
 
-                  <a href="graphics" class="btn btn-primary">Explore</a>
+                  <a href="graphics.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
@@ -331,7 +331,7 @@
 
           </div>
           <div class="explore-more-container">
-            <a href="service" class="btn btn-primary">Explore More</a>
+            <a href="service.html" class="btn btn-primary">Explore More</a>
           </div>
 
         </div>
