--- a/seo.html
+++ b/seo.html
@@ -736,9 +736,7 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>The key components of SEO include keyword research, on-page optimization (like meta tags and content),
-                off-page optimization (like backlinks), technical SEO (like site speed and mobile-friendliness), and
-                user experience.</p>
+              <p>Key components of SEO include keyword research, on-page optimization, quality content, technical SEO, backlinks, user experience, and analytics monitoring.</p>
             </div>
           </div>
 
@@ -750,9 +748,7 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Technical SEO focuses on the backend of your website to ensure search engines can crawl and index your
-                site effectively. This includes optimizing site speed, mobile-friendliness, site structure, and fixing
-                any technical issues.</p>
+              <p>Key components of SEO include keyword research, on-page optimization, quality content, technical SEO, backlinks, user experience, and analytics monitoring.</p>
             </div>
           </div>
 
@@ -764,8 +760,7 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Regular updates are important for SEO. Keeping your content fresh and relevant, adding new pages, and
-                updating existing content can help maintain and improve your search engine rankings.</p>
+              <p>Frequent updates should occur within a few-week interval in order to ensure optimization, update the content by making it more user friendly and addressing the technical issues.</p>
             </div>
           </div>
 
@@ -777,9 +772,7 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p> While you can start with basic SEO techniques on your own, hiring an SEO expert or agency can provide
-                more advanced strategies and insights. Professionals can help you achieve better results and stay
-                updated with the latest SEO trends.</p>
+              <p>Yes, SEO can be managed independently, but many a times the expert knowledge and experience will provide more efficient approaches to the problem and provide faster results.</p>
             </div>
           </div>
         </div>
