--- a/smo.html
+++ b/smo.html
@@ -727,56 +727,49 @@
         <div class="faq-right-content">
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">What are the key components of SEO?</span>
+              <span class="faq-item-text">How does SMO benefit my business?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>The key components of SEO include keyword research, on-page optimization (like meta tags and content),
-                off-page optimization (like backlinks), technical SEO (like site speed and mobile-friendliness), and
-                user experience.</p>
+              <p>SMO makes brands more prominent, helps to attract more visitors, encourage them to interact with the content, invites them to join a community, and thus, leads to conversions.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">How does technical SEO affect my website?</span>
+              <span class="faq-item-text">What platforms should I focus on for SMO?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Technical SEO focuses on the backend of your website to ensure search engines can crawl and index your
-                site effectively. This includes optimizing site speed, mobile-friendliness, site structure, and fixing
-                any technical issues.</p>
+              <p>Categorise on Facebook, Instagram, twitter, and LinkedIn depending on the audience to be targeted and the objectives to be achieved on the business.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">How often should I update my website for SEO?</span>
+              <span class="faq-item-text">How can I create engaging content for social media?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Regular updates are important for SEO. Keeping your content fresh and relevant, adding new pages, and
-                updating existing content can help maintain and improve your search engine rankings.</p>
+              <p>Succeed at creating interesting content for your audience by using visuals, telling stories, polls, and questions, as well as by sharing user-generated content to reach out to your audience successfully.</p>
             </div>
           </div>
 
           <div class="faq-item">
             <div class="faq-item-head">
-              <span class="faq-item-text">Can I do SEO on my own, or do I need an expert?</span>
+              <span class="faq-item-text">How can I measure the success of my SMO efforts?</span>
               <span class="faq-item-icon">
                 <i class="fa fa-chevron-down"></i>
               </span>
             </div>
             <div class="faq-item-body">
-              <p> While you can start with basic SEO techniques on your own, hiring an SEO expert or agency can provide
-                more advanced strategies and insights. Professionals can help you achieve better results and stay
-                updated with the latest SEO trends.</p>
+              <p>The relative success of SMO can be evaluated with the help of engagement rates, followers, site traffic, conversion, and share analytics.</p>
             </div>
           </div>
         </div>
