--- a/carrer.html
+++ b/carrer.html
@@ -73,7 +73,7 @@
                   <ul class="navbar-list">
         
                     <li class="nav-item">
-                      <a href="#home" class="nav-link">Home</a>
+                      <a href="index.html" class="nav-link">Home</a>
                     </li>
         
                     <li class="nav-item">
