--- a/web.html
+++ b/web.html
@@ -89,7 +89,7 @@
           <ul class="navbar-list">
 
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
