--- a/localization.html
+++ b/localization.html
@@ -180,7 +180,7 @@
         </div>
 
         <!-- <img src="./assets/images/bg.png" alt="shape" class="shape-content"> -->
-        <img src="./assets/img/seo.png" alt="seo">
+        <img src="./assets/img/localization.png" alt="seo">
       </section>
 
 
