--- a/smo.html
+++ b/smo.html
@@ -182,7 +182,7 @@
         </div>
 
         <!-- <img src="./assets/images/bg.png" alt="shape" class="shape-content"> -->
-        <img src="./assets/img/seo.png" alt="seo">
+        <img src="./assets/img/smo.png" alt="seo">
       </section>
 
 
@@ -255,57 +255,6 @@
                 </div>
               </li>
 
-              <!--  <li>
-                <div class="about-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="search-outline"></ion-icon>
-                  </div>
-
-                  <h3 class="h3 card-title">Search Engine Optimization </h3>
-
-                  <p class="card-text">
-                    Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                  </p>
-
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
-                </div>
-              </li>
-
-              <li>
-                <div class="about-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="videocam-outline"></ion-icon>
-                  </div>
-
-                  <h3 class="h3 card-title">Promotional Video Marketing</h3>
-
-                  <p class="card-text">
-                    Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                  </p>
-
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
-                </div>
-              </li>
-
-              <li>
-                <div class="about-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="color-palette-outline"></ion-icon>
-                  </div>
-
-                  <h3 class="h3 card-title">Graphics Design</h3>
-
-                  <p class="card-text">
-                    Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                  </p>
-
-                  <a href="https://www.example.com" class="btn btn-primary">Explore</a>
-                </div>
-              </li>
- -->
 
             </ul>
 
